RESOLVED FIXED69642
[FileSystem API] DirectoryEntry.getFile path argument is required
https://bugs.webkit.org/show_bug.cgi?id=69642
Summary [FileSystem API] DirectoryEntry.getFile path argument is required
Mark Pilgrim (Google)
Reported 2011-10-07 10:52:20 PDT
According to http://dev.w3.org/2009/dap/file-system/pub/FileSystem/#idl-def-DirectoryEntry , the first parameter (path) to the getFile() method is required. This test calls the method without the required parameter and logs the result. Expected behavior: throws TypeError: not enough arguments Actual behavior: no exception thrown
Attachments
Patch (2.50 KB, patch)
2011-10-07 10:53 PDT, Mark Pilgrim (Google)
no flags
Patch (5.62 KB, patch)
2011-11-30 13:58 PST, Mark Pilgrim (Google)
no flags
Mark Pilgrim (Google)
Comment 1 2011-10-07 10:53:15 PDT
WebKit Review Bot
Comment 2 2011-10-07 13:29:38 PDT
Comment on attachment 110175 [details] Patch Attachment 110175 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/10007290 New failing tests: perf/show-hide-table-rows.html
Mark Pilgrim (Google)
Comment 3 2011-10-07 13:35:21 PDT
I assume that's flake; this adds no code, only tests.
Adam Barth
Comment 4 2011-10-07 15:01:58 PDT
Comment on attachment 110175 [details] Patch Mark, did you mean to include the -expected.txt file and/or nominate the patch for review? (Also you might want to mark these bugs as blocking the meta Bug 65787 )
Mark Pilgrim (Google)
Comment 5 2011-11-30 13:58:33 PST
WebKit Review Bot
Comment 6 2011-11-30 21:44:45 PST
Comment on attachment 117270 [details] Patch Clearing flags on attachment: 117270 Committed r101606: <http://trac.webkit.org/changeset/101606>
WebKit Review Bot
Comment 7 2011-11-30 21:44:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.