[FileSystem API] DirectoryEntry.getFile path argument is required https://bugs.webkit.org/show_bug.cgi?id=69642

Patch by Mark Pilgrim <pilgrim@chromium.org> on 2011-11-30
Reviewed by Adam Barth.

Source/WebCore:

Test: fast/filesystem/simple-required-arguments-getfile.html

* bindings/js/JSDirectoryEntryCustom.cpp:
(WebCore::JSDirectoryEntry::getFile): check args length and throw TypeError if not enough arguments
* bindings/v8/custom/V8DirectoryEntryCustom.cpp:
(WebCore::V8DirectoryEntry::getFileCallback): check args length and throw TypeError if not enough arguments

LayoutTests:

* fast/filesystem/resources/simple-required-arguments-getfile.js: Added.
(errorCallback):
(successCallback):
* fast/filesystem/simple-required-arguments-getfile-expected.txt: Added.
* fast/filesystem/simple-required-arguments-getfile.html: Added.

Canonical link: https://commits.webkit.org/90078@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101606 268f45cc-cd09-0410-ab3c-d52691b4dbfc