Source/WebCore/bindings/js/JSDirectoryEntryCustom.cpp
@@ -47,6 +47,9 @@ namespace WebCore {
 
 JSValue JSDirectoryEntry::getFile(ExecState* exec)
 {
+    if (exec->argumentCount() < 1)
+        return throwError(exec, createTypeError(exec, "Not enough arguments"));
+
     DirectoryEntry* imp = static_cast<DirectoryEntry*>(impl());
     const String& path = valueToStringWithUndefinedOrNullCheck(exec, exec->argument(0));
     if (exec->hadException())
